--- a/onsei2/Main.storyboard
+++ b/onsei2/Main.storyboard
@@ -42,6 +42,7 @@
                     <navigationItem key="navigationItem" id="7rm-tT-7Oo">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="FfD-55-6Ev">
                             <connections>
+                                <action selector="save:" destination="1U5-L9-wUD" id="5Tp-gh-Oi5"/>
                                 <segue destination="BYZ-38-t0r" kind="push" identifier="toSecondViewController" id="yoH-jL-six"/>
                             </connections>
                         </barButtonItem>
@@ -166,7 +167,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="M9v-wz-k8L">
-                        <barButtonItem key="rightBarButtonItem" title="save" id="snL-1d-wuK">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="snL-1d-wuK">
                             <connections>
                                 <action selector="saveWithSender:" destination="BYZ-38-t0r" id="Cld-6u-gvz"/>
                             </connections>
